<?xml version="1.0" encoding="utf-8"?>
<!--<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".InscriptionActivity">-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".InscriptionActivity">
    <android.support.constraint.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".InscriptionActivity">

    <TextView
            android:text="@string/inscription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/text_view_inscription_title" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="36sp" android:textStyle="bold|italic"
            android:paddingLeft="@android:dimen/notification_large_icon_width"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:ems="10"
            android:id="@+id/txtFirstName" app:layout_constraintTop_toBottomOf="@+id/text_view_inscription_title"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginTop="32dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            android:ems="10"
            android:id="@+id/txtLastName" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFirstName" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"/>
    <TextView
            android:text="@string/degrees"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView3" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLastName" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:textSize="24sp" android:textStyle="bold|italic"/>
    <CheckBox
            android:text="@string/o_level"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cbOLevel" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:layout_marginRight="32dp"/>
    <CheckBox
            android:text="@string/bachelor"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cbBachelor"
            app:layout_constraintTop_toBottomOf="@+id/cbOLevel" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="8dp"/>
    <CheckBox
            android:text="@string/master"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/cbMaster" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cbBachelor" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>
    <Button
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_save" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/cbMaster"/>
</android.support.constraint.ConstraintLayout>
</ScrollView>